# Chalkboard

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  requirements.txt  run_server.py
docker/: Dockerfile  chalkboard_base.py  render.sh
docs/: api.html  cli.html  docs.css  guide.html  index.html
docs/plans/: 2026-04-07-pipeline-timing-estimates.md  2026-04-07-video-library.md
docs/specs/: 2026-04-07-video-library-design.md
pipeline/: context.py  graph.py  render_trigger.py  retry.py  state.py  visual_qa.py
pipeline/agents/: code_validator.py  fact_validator.py  (+5 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/chalkboard/: __init__.py  client.py  exceptions.py  models.py  webhooks.py
sdk/python/examples/: quickstart.py  verify_webhook.py
server/: app.py  jobs.py  library.py  library_routes.py  models.py  routes.py  upload.py
tests/: conftest.py  test_chalkboard_base.py  test_chapters_captions.py  test_code_validator.py  test_context.py  test_elevenlabs_tts.py  test_fact_validator.py  test_github.py  test_graph.py  test_kokoro_tts.py  test_layout_checker.py  test_library_routes.py  test_library_store.py  test_manim_agent.py  test_openai_tts.py  test_orchestrator.py  test_quiz.py  test_render_preview.py  test_render_progress.py  test_render_timeout.py  test_render_trigger.py  test_research_agent.py  test_retry.py  test_run_callback.py  test_script_agent.py  test_server.py  test_server_jobs.py  test_server_upload.py  test_speed.py  test_state.py  test_templates.py  test_thumbnail.py  test_tts_base.py  test_visual_qa.py
(+27 files in other folders)
